--- a/calculator.css
+++ b/calculator.css
@@ -48,10 +48,13 @@ body {
 .zero {
   width: 130px;
 }
-
+.btn-dark {
+  background-color: #35353a;
+}
 .calculo {
   color: #00ff6a;
   text-shadow: 1px 1px 1px #00ff6a;
+  background-color: #2d2d32;
 }
 
 .calculo:hover {
